[package]
name = "pend"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "do now, wait later – tiny job runner"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "alloc"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[[bin]]
name = "pend"
path = "src/main.rs"
