[package]
name = "pend"
version = "0.1.0"
description = "do now, wait later – tiny job runner"
readme = "README.md"
license = "MIT"
edition = "2021"
authors = ["Steve Mostovoy <stevemostovoysm@gmail.com>"]
repository = "https://github.com/Stovoy/pend"
homepage = "https://github.com/Stovoy/pend"
documentation = "https://docs.rs/pend"

# Extra metadata for crates.io
# Up to five short keywords that describe the crate
keywords = [
    "job-runner",
    "cli",
    "shell",
    "parallel",
    "concurrency",
]

# Crates.io category slugs (see https://crates.io/categories)
categories = [
    "command-line-utilities",
    "development-tools::build-utils",
    "concurrency",
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "alloc"] }
unicode-normalization = "0.1"
# File locking for cross-platform advisory locks
fs2 = "0.4"
notify = "8.0"
anstyle = "1.0"
crossterm = "0.29"
wait-timeout = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[[bin]]
name = "pend"
path = "src/main.rs"
